# aws_automations

./: .env.development  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_integration.py
.amazonq/rules/memory-bank/: guidelines.md  product.md  structure.md  tech.md
.github/workflows/: publish.yml  test.yml
aws_automations/: __init__.py  cloudwatch_cleanup.py  config.py  ebs_cleanup.py  ec2_cleanup.py  iam_cleanup.py  lambda_cleanup.py  main.py  menu.py  s3_cleanup.py  start.py
data_sources/: data_sources.md
tests/: test_s3_cleanup.py
