[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-automations"
version = "0.1.0"
description = "Multi-service AWS resource cleanup automation with dry-run safety"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AWS Automations", email = "contact@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.29,<2.0",
    "PyYAML>=6.0,<7.0",
    "rich>=13.7,<14.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.0,<5.0",
    "black>=22.0.0,<24.0",
    "flake8>=5.0.0,<7.0",
    "mypy>=1.0.0,<2.0",
    "moto[s3]>=5.0,<6.0"
]

[project.scripts]
aws-cleanup = "aws_automations.main:main"
aws-menu = "aws_automations.menu:interactive_menu"

[project.urls]
Homepage = "https://github.com/yourusername/aws-automations"
Repository = "https://github.com/yourusername/aws-automations"
Issues = "https://github.com/yourusername/aws-automations/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
